# natlinkcore

./: .gitignore  build_natlinkcore.ps1  publish_natlinkcore.ps1  pyproject.toml  readme.md  requirements.txt
.circleci/: config.yml
.github/workflows/: python-build-testypi.yml  python-lint-test.yml  python-publish.yml
documentation/: conf.py  config.rst  developers.rst  documentation.rst  errors Quintijn.txt  index.rst  loader.rst  modules.rst  natlinkstatus.rst  natlinkutils.rst  project.rst
src/natlinkcore/: __init__.py  callbackhandler.py  config.py  loader.py  natlinkpydebug.py  natlinkstatus.py  natlinktimer.py  natlinkutils.py  nsformat.py  readwritefile.py  redirect_output.py  tkinter_dialogs.py
src/natlinkcore/DefaultConfig/: _config_instructions.py  natlink.ini
src/natlinkcore/SampleMacros/: __init__.py  _debug_natlink.py  _sample_activatedeactivate.py  _sample_callback.py  _sample_directory_information.py  _sample_move_natlinktimer.py  _sample_natlinkstatus.py  _sample_runmimic.py
src/natlinkcore/SampleMacros/OriginalSampleMacros/: _globals.py  _mouse.py  _sample1.py  _sample2.py  _sample3.py  _sample4.py  _sample8.py  _sample9.py  excel_sample7.py  natspeak_sample6.py
src/natlinkcore/configure/: __init__.py  foo.txt  list of functions.txt  loggert.py  nalinkgui.py  natlink_extensions.py  natlink_extract_ini_value.py  natlinkconfig_cli.py  natlinkconfig_gui.py  natlinkconfigfunctions.py
tests/: buttonclicktest.py  conftest.py  execscriptest.py  manual_test_dragoncode.py  manual_test_pyuac.py  readme.txt  test_callbackhandler.py  test_config.py  test_dragoncode.py  test_loader.py  test_natlinkconfig.py  test_natlinktimer.py  test_nsformat.py  test_readwritefile.py
tests/config_files/: dap_settings_1.ini  dap_settings_2.ini  dap_settings_3.ini
tests/mock_readwritefile/: cp1252.txt  natlinkinisample.ini  nsapps_aaron.ini  nsapps_short.ini
tests/readwritefiletest/: natlinkconfiguredout.ini  natlinkout.ini
