[build-system]
requires = ["flit_core >=3.2,<4" ,"pytest>=7.1.2"]
build-backend = "flit_core.buildapi"

[project]
name = "natlinkcore"
authors = [{name = "Quintijn Hoogenboom (maintainer)", email = "q.hoogenboom@antenna.nl"}]
dynamic = ["version", "description"]
requires-python = ">=3.9"
readme = "readme.md"
dependencies= [
    "pysimplegui>=4.60.3", 
    "pyenvutils",
    "pydebugstring",
    "dtactions>=1.5.0",
]
    classifiers=[
        "Development Status :: 4 - Beta",
        "Environment :: Win32 (MS Windows)",
        "Intended Audience :: Developers",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Multimedia :: Sound/Audio :: Speech",
        "Topic :: Software Development :: Libraries :: Python Modules"
        ]
[project.optional-dependencies]
test = [
    "pytest >=7.1.2",
]
 

[tool.pytest.ini_options]
minversion = "7.1.2"
addopts = "--capture=tee-sys "
# very important
#the pythonpath lets pytest load code in your source area
#in addition to that in site-packages etc.
#you may want to run your tests without install natlinkcore with flit or pip
pythonpath = [
    "src",
    "src/natlinkcore",
    "tests",
]
testpaths= [
    "tests",
]

[project.scripts]
natlinkconfig_cli = "natlinkcore.configure.natlinkconfig_cli:main_cli"
natlinkconfig = "natlinkcore.configure.natlinkgui:main_gui"

[project.urls]
Home = "https://github.com/dictation-toolbox/natlinkcore/"
