[build-system]
requires = ["flit_core >=3.2,<4", "pytest>=7.1.2"]
build-backend = "flit_core.buildapi"

[project]
name = "natlinkcore"
authors = [{name = "Quintijn Hoogenboom (maintainer)", email = "q.hoogenboom@antenna.nl"}]
dynamic = ["version", "description"]
requires-python = ">=3.9"
readme = "readme.md"
dependencies= [
    "natlink>=5.3.4",
    "pysimplegui>=4.60.3", 
    "pydebugstring",
    "dtactions>=1.5.7",
]
    classifiers=[
        "Development Status :: 4 - Beta",
        "Environment :: Win32 (MS Windows)",
        "Intended Audience :: Developers",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Multimedia :: Sound/Audio :: Speech",
        "Topic :: Software Development :: Libraries :: Python Modules"
        ]
[project.optional-dependencies]
test = [
    "pytest >=7.1.2",
]
dev = [
    "pyenvutils","entry-point-inspector"
] 

[tool.pytest.ini_options]
minversion = "7.1.2"
addopts = "--capture=tee-sys "
# very important
#the pythonpath lets pytest load code in your source area
#in addition to that in site-packages etc.
#you may want to run your tests without install natlinkcore with flit or pip
pythonpath = [
    "src",
    "src/natlinkcore",
    "tests",
]
testpaths= [
    "tests",
]

[project.scripts]
natlinkconfig_cli = "natlinkcore.configure.natlinkconfig_cli:main_cli"
natlink_extensions = "natlinkcore.configure.natlink_extensions:main"

[project.gui-scripts]
natlinkconfig_gui = "natlinkcore.configure.natlinkconfig_gui:main_gui"

[project.entry-points."natlink.extensions"]
natlink_sample_macros  = "natlinkcore.SampleMacros:locateme"

[project.urls]
Home = "https://github.com/dictation-toolbox/natlinkcore/"
